# mlx-kld

./: .gitignore  README.md  pyproject.toml
corpora/: LICENSE.wikitext
mlx_kld/: __init__.py  chart.py  cli.py  compare.py  metrics.py  model_info.py  report.py
sample_prompts/: prompts.txt
tests/: test_cli.py  test_model_info.py  test_report.py  test_sparse_kld.py
