[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-kld"
version = "0.1.0"
description = "KL divergence measurement tool for comparing MLX language models"
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.20.0",
    "mlx-lm>=0.20.0",
    "numpy",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
mlx-kld = "mlx_kld.cli:main"
