[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-kld"
version = "0.2.0"
description = "KL divergence measurement tool for comparing MLX language models"
requires-python = ">=3.14"
dependencies = [
    "mlx>=0.31.2",
    "mlx-lm>=0.31.3",
    "numpy>=2.4.4",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3"]
chart = ["matplotlib>=3.8"]

[project.scripts]
mlx-kld = "mlx_kld.cli:main"

# Explicit package list — auto-discovery would otherwise treat
# top-level results/ and sample_prompts/ as Python packages.
[tool.setuptools]
packages = ["mlx_kld"]
